class ConcreteProduct1 implements Product {
    @Override
    public void doSomething() {
        System.out.println("Product 1 does something");
    }
}
