class ConcreteProduct2 implements Product {
    @Override
    public void doSomething() {
        System.out.println("Product 2 does something");
    }
}